@@ -72,6 +72,11 @@ plain text' authentication is used. This is only secure over an HTTPS link.
     <td align="center" valign="top">No; default "false"</td>
   </tr>
   <tr>
+    <td valign="top">quiet</td>
+    <td valign="top">Log errors only.(&quot;true&quot;/&quot;false&quot;).</td>
+    <td align="center" valign="top">No; default "false"</td>
+  </tr>
+  <tr>
     <td valign="top">ignoreerrors</td>
     <td valign="top">Log errors but don't treat as fatal.</td>
     <td align="center" valign="top">No; default "false"</td>
